--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <input type="text" class="form-control" id="todoTitle" placeholder="Todo title...">
                     <button onclick="newTodo()" class="addBtn btn btn-sm btn-primary form-control mt-3">Add</span>
                 </form>
-                <button onlick="deleteAllTodos()" class="addBtn btn btn-sm btn-danger form-control mt-5">Delete
+                <button onclick="deleteAllTodos()" class="addBtn btn btn-sm btn-danger form-control mt-5">Delete
                     All</span>
             </div>
         </div>
